# SQLfundamentals_Task4

./: .env.example  DEVELOPMENT_GUIDELINES.md  README.md  customers.csv  orders.csv  products.csv  pyproject.toml
src/sqlfundamental/: main.py  query.txt  schema.sql  utils.py
src/sqlfundamental/sqlchema/: load_data.py
